@@ -2,3 +2,5 @@ Mike Lampard <mlampard@users.sf.net>
 
 Antonio Bartolini <robynhub@gmail.com>
 - patch for relative scaling of net graph.
+
+Piotr Czarnecki <czarnyckm@users.sf.net>
